2002-02-13  John Harper  <jsh@unfactored.org>

	* widgets/frame-style.jl (make-frame-style-item): go to great
	lengths to avoid picking up fucked changes from the combo's
	entry widget

2002-02-12  John Harper  <jsh@unfactored.org>

	* slot.jl, shell.jl, main.jl.in, layout.jl, group.jl: 
	* layouts/keymaps.jl: 
	* widgets/match-window.jl, widgets/keymap.jl,
	widgets/frame-style.jl, widgets/command.jl: 

	Ported to current gnome2 rep-gtk

2002-01-29  John Harper  <jsh@unfactored.org>

	* slot.jl, shell.jl, layout.jl, group.jl, apply.jl: 
	* layouts/keymaps.jl: 
	* widgets/workspace-geometry.jl, widgets/match-window.jl,
	widgets/keymap.jl, widgets/icon.jl, widgets/frame-style.jl,
	widgets/event.jl, widgets/command.jl: 

	Changed module names for gnome2 rep-gtk

2001-09-07  John Harper  <jsh@pixelslut.com>

	* layouts/keymaps.jl (layout-keymaps): fixed bug of keymap
	popup menu being displayed even if there are no keymaps to
	configure

	* shell.jl (display-flattened): fixed bug of `--flatten
	--single-level' combination not working properly

2001-08-23  John Harper  <jsh@pixelslut.com>

	* widgets/match-window.jl (make-match-window:matchers): search
	the translated X properties for the real atom name when
	grabbing properties, don't pass the (translated) property name

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-04-20  John Harper  <jsh@eazel.com>

	Extra i18n work. Adapted from a patch by Vlad Harchev
	<hvv@hippo.ru>

	* layouts/keymaps.jl (beautify-keymap-name): try to localize
	the name before returning it
	* widgets/keymap.jl (beautify-symbol-name): ditto
	* widgets/match-window.jl (beautify-symbol-name): ditto

	* widgets/match-window.jl (make-match-window:matchers):
	localizes all property names before starting, then uses that
	list of properties

2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.37

2001-02-07  John Harper  <jsh@eazel.com>

	* widgets/event.jl (make-event-item): strip leading and