@@ -1,3 +1,10 @@
+2002-03-03  John Harper  <jsh@pixelslut.com>
+
+	* shell.jl: display using a tree of notebook pages for now
+
+	* widgets/frame-style.jl (make-frame-style-item): removed
+	debugging spew
+
 2002-02-13  John Harper  <jsh@unfactored.org>
 
 	* widgets/frame-style.jl (make-frame-style-item): go to great
